--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     depends_on:
       - mongo_empresas
     ports:
-      - "3001:3000"
+      - "3001:3000" #REST
+      - "50051:50051" #gRPC
     command: [ "node", "dist/main.js" ]
 
   mongo_empresas:
